# observe.market

./: .gitignore  CNAME  LICENSE  README.md  fetch_and_save.py  fetch_data.py  gap_strategy.py  generate_manifest.py  index.html  mongo_schema.md  pyproject.toml
.github/workflows/: update_data.yml
data/: manifest.json
data/daily_index/: 2026-04-07.json
data/daily_price/: 2026-04-08.json  2026-04-09.json  2026-04-13.json  2026-04-17.json  2026-04-20.json
data/gap_jump/: 2026-04-02.json  2026-04-07.json  2026-04-09.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-20.json
docs/: bookmark.html  featured-warrants.html  gap.html  index.html  premium-warrant.html  punish.html  stock.html  tpex.html  twse.html  wantgoo.html  warrant-filter.html  warrant.html  warrant_filter.html  watchlist.html
docs/data/: manifest.json  stock_info.json
docs/data/daily_index/: 2026-04-02.json  2026-04-16.json  2026-04-21.json
docs/data/daily_price/: 2026-04-01.json  2026-04-16.json
docs/data/daily_punish/: 2026-04-22.json
docs/data/gap_jump/: 2026-04-10.json  2026-04-17.json  2026-04-21.json
docs/data/tpex/: index_history.json  latest.json  punish_history.json
docs/data/twse/: index_history.json  latest.json  punish_history.json
docs/data/warrant/: 2026-04-23.json  2026-04-24.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-11.json  (+50 more)
src/: clean_data.py  config.py  fetch_and_save.py  fetch_stock_info.py  gap_strategy.py  generate_manifest.py  generate_mongo_import.py  generate_stock_history.py
(+2754 files in other folders)
