[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "observe-market"
version = "0.1.0"
authors = [
  { name = "mzuen" },
]
description = "Market data observer for Taiwan stocks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mzuen/observe.market"
